<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="80dp" />

    <TextView
        android:id="@+id/player_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/second_step_player_name"
        android:textSize="30sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <TextView
        android:id="@+id/challenge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/second_step_challenge_string"
        android:textSize="24sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/second_step_question_string"
            android:textSize="24sp" />

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/card"
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:scaleType="fitXY" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/yes_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/second_step_yes_string" />

        <Button
            android:id="@+id/no_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/second_step_no_string" />
    </LinearLayout>

    <TableLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/player1_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/name_p1" />

            <Button
                android:id="@+id/player2_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/name_p2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/player3_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_p3" />

            <Button
                android:id="@+id/player4_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_p4" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/player5_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_p5" />

            <Button
                android:id="@+id/player6_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_p6" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/player7_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_p7" />

            <Button
                android:id="@+id/player8_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_p8" />
        </TableRow>
    </TableLayout>
</LinearLayout>