<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="80dp" />

    <TextView
        android:id="@+id/player_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/first_step_player_name"
        android:textSize="30sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <TextView
        android:id="@+id/challenge"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:text="@string/fourth_tour"
        android:textSize="36sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TableLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/choice1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:text="@string/fourth_tour_choice_one"
                android:textSize="18sp" />

            <Button
                android:id="@+id/choice2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/fourth_tour_choice_two"
                android:textSize="18sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/choice3"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fourth_tour_choice_three"
                android:textSize="18sp" />

            <Button
                android:id="@+id/choice4"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fourth_tour_choice_four"
                android:textSize="18sp" />

        </TableRow>

    </TableLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/card1"
            android:layout_width="90dp"
            android:layout_height="140dp"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/diamonds_1" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/card2"
            android:layout_width="90dp"
            android:layout_height="140dp"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/diamonds_k" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/card3"
            android:layout_width="90dp"
            android:layout_height="140dp"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/hearts_q" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/card4"
            android:layout_width="90dp"
            android:layout_height="140dp"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/clubs_8" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <Button
        android:id="@+id/nextturn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/first_step_next_button"
        android:textSize="18sp" />
</LinearLayout>